--- a/practicum/func_chess.ipynb
+++ b/practicum/func_chess.ipynb
@@ -34,6 +34,51 @@
       "7|P P P P P P P P |\n",
       "8|R N B Q K B N R |\n",
       "  a b c d e f g h\n",
+      "Ход черных:\n",
+      "Введите начальное положение фигуры (например, e2): e5\n",
+      "Введите конечное положение фигуры (например, e4): e6\n",
+      "\n",
+      "\n",
+      "Некорректный ход. Попробуйте еще раз.\n",
+      "Кол-во сделанных ходов 1\n",
+      "  a b c d e f g h\n",
+      "1|r n b q k b n r |\n",
+      "2|p p p p . p p p |\n",
+      "3|. . . . . . . . |\n",
+      "4|. . . . p . . . |\n",
+      "5|. . . . . . . . |\n",
+      "6|. . . . . . . . |\n",
+      "7|P P P P P P P P |\n",
+      "8|R N B Q K B N R |\n",
+      "  a b c d e f g h\n",
+      "Ход черных:\n",
+      "Введите начальное положение фигуры (например, e2): e7\n",
+      "Введите конечное положение фигуры (например, e4): e5\n",
+      "Кол-во сделанных ходов 2\n",
+      "  a b c d e f g h\n",
+      "1|r n b q k b n r |\n",
+      "2|p p p p . p p p |\n",
+      "3|. . . . . . . . |\n",
+      "4|. . . . p . . . |\n",
+      "5|. . . . P . . . |\n",
+      "6|. . . . . . . . |\n",
+      "7|P P P P . P P P |\n",
+      "8|R N B Q K B N R |\n",
+      "  a b c d e f g h\n",
+      "Ход белых:\n",
+      "Введите начальное положение фигуры (например, e2): e1\n",
+      "Введите конечное положение фигуры (например, e4): e2\n",
+      "Кол-во сделанных ходов 3\n",
+      "  a b c d e f g h\n",
+      "1|r n b q . b n r |\n",
+      "2|p p p p k p p p |\n",
+      "3|. . . . . . . . |\n",
+      "4|. . . . p . . . |\n",
+      "5|. . . . P . . . |\n",
+      "6|. . . . . . . . |\n",
+      "7|P P P P . P P P |\n",
+      "8|R N B Q K B N R |\n",
+      "  a b c d e f g h\n",
       "Ход черных:\n"
      ]
     }
@@ -238,12 +283,14 @@
     "\n",
     "    # Проверка хода для короля\n",
     "    piece = board[start[0]][start[1]]\n",
-    "    if piece.upper() != 'K':\n",
-    "        return False\n",
-    "    if abs(start[0] - end[0]) <= 1 and abs(start[1] - end[1]) <= 1:\n",
-    "        return True\n",
-    "    else:\n",
-    "        return False\n",
+    "    if piece.upper() == 'K':\n",
+    "        if abs(start[0] - end[0]) == 2 and abs(start[1] - end[1]) == 0:\n",
+    "            # Castling move\n",
+    "            rook_start = (start[0], start[1] + (-1 if end[0] > start[0] else 1))\n",
+    "            rook_end = (start[0], end[1])\n",
+    "            if board[rook_start[0]][rook_start[1]] == 'R' and board[rook_end[0]][rook_end[1]] == '.' and all(board[i][start[1] + (-1 if end[0] > start[0] else 1)] == '.' for i in range(start[0] + (-1 if end[0] > start[0] else 1), end[0])):\n",
+    "                return True\n",
+    "            \n",
     "    move_history.append((start, end))\n",
     "\n",
     "def rollback_move(board, move_history, num_moves=1):\n",
@@ -284,14 +331,6 @@
     "# Запуск игры\n",
     "play_game()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "db95d2ba",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
